traefik/ingress-example.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-ingress
  namespace: traefik
  annotations:
    spec.ingressClassName: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: beta.beta-82.win
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-python
            port:
              number: 8080
