traefik/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web-entrypoint
spec:
  entryPoints:
    - web
